# nebulai

./: .gitignore  README.md  package-lock.json  pyproject.toml
.claude/: launch.json
.claude/skills/composable-product-design/: SKILL.md
.claude/skills/design-process/: SKILL.md
.claude/skills/interaction-craft/: SKILL.md
.claude/skills/nebulai/: SKILL.md
.claude/skills/nebulai-neurons/: SKILL.md
.claude/skills/nebulai-sae/: SKILL.md
.claude/skills/nebulai-tokens/: SKILL.md
.claude/skills/nebulai-viz/: SKILL.md
.claude/skills/nebulai-viz-deckgl/: SKILL.md
.claude/skills/nebulai-viz-threejs/: SKILL.md
.claude/skills/nebulai-viz-wgsl/: SKILL.md
.claude/skills/visual-craft/: SKILL.md
dist-skills/: composable-product-design.skill  design-process.skill  interaction-craft.skill  nebulai-neurons.skill  nebulai-sae.skill  nebulai-tokens.skill  nebulai-viz-deckgl.skill  nebulai-viz-threejs.skill  nebulai-viz-wgsl.skill  nebulai-viz.skill  nebulai.skill  visual-craft.skill
docs/: DEPLOY-STATIC.md  DETAILS.md  INTERP_FEATURES.md
src/nebulai/: __init__.py  cli.py  units.py  weights.py
src/nebulai/backend/: build_server.py  cluster.py  compare.py  edges.py  embed.py  export.py  metrics.py  name.py  reduce.py  (+2 more)
tests/: test_api_tokens.py  test_build_server.py  test_compare.py  test_edges.py  test_metrics.py  test_neurons.py  test_sae.py  test_weights.py
viewer/: CONTRIBUTING.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
viewer/scripts/: demo-record.mjs  session-report.ts
viewer/src/: main.ts
(+121 files in other folders)
